[project]
name = "shiny-waffle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.1",
    "ollama>=0.6.2",
    "pydantic-settings>=2.14.0",
    "qdrant-client>=1.17.1",
    "structlog>=25.5.0",
]

[dependency-groups]
dev = ["ruff", "mypy", "pytest", "pytest-asyncio", "pytest-cov"]
eval = ["ragas", "deepeval"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.14"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"